[package]
name = "terra-contract-manager"
version = "0.1.0"
authors = ["CyberHoward"]
edition = "2018"

exclude = [
  
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = { version = "0.8" }
cw20 = { version = "0.8" }
cosmwasm-bignumber = "2.2"
cosmwasm-std = { version = "0.16" }
cosmwasm-storage = { version = "0.16" }
cw-storage-plus = { version = "0.8" }
cw-controllers = { version = "0.8" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
terra-cosmwasm = "2.2"
terraswap = "2.4.0"
thiserror = { version = "1.0.21" }
pandora-os = { version = "0.1.0" }
protobuf = { version = "2", features = ["with-bytes"] }
terra-rust-api = {version ="1.2"}
tokio = { version = "1.4", features = ["full"] }
secp256k1 = { version = "0.20.3", default-features = false }
log="0.4.14"
anyhow="1.0"
serde_json = "1.0.79"
reqwest = { version = "0.11.9"}
[dev-dependencies]
cosmwasm-schema = { version = "0.16" }
