[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "1.0.21" }
pandora-os = { path = "../packages/pandora-os"}
protobuf = { version = "2", features = ["with-bytes"] }
terra-rust-api = {version ="1.2"}
tokio = { version = "1.4", features = ["full"] }
secp256k1 = { version = "0.20.3", default-features = false }
log="0.4.14"
anyhow="1.0"
cosmwasm-std = { version = "0.16" }
serde_json = "1.0.79"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
reqwest = { version = "0.11.9"}
dotenv="0.15.0"
env_logger = "0.8.3"
terra-rust-script = {path = "../terra-rust-script"}
base64 = "0.13.0"
