[package]
name = "abstract-boot-integration-tests"
version = { workspace = true }
edition = { workspace = true }


[lib]

[[bin]]
name = "setup"


[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
serde = { workspace = true }
semver = { workspace = true, default-features = false }
cw-controllers = { workspace = true }
thiserror = { workspace = true }
cw-asset = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }

cw-orch = { workspace = true, features = ["daemon", "interchain"] }
abstract-core = { workspace = true, features = ["boot"] }

abstract-boot = { workspace = true, features = ["daemon"] }
tokio = { workspace = true }
log = "0.4.14"
anyhow = { workspace = true }
serde_json = "1.0.79"
reqwest = { version = "0.11.9" }
dotenv = "0.15.0"
env_logger = "0.10.0"

cosmos-sdk-proto = { version = "0.18.0", features = [
  "grpc-transport",
  "cosmwasm",
] }
serde-cw-value = "0.7.0"
sha256 = "1.1.1"
clap.workspace = true
async-recursion = "1.0.4"
base64 = "0.21.0"
tonic = "0.9.2"
futures = "0.3.28"

ibc-chain-registry = "0.23.1"

abstract-etf = { git="https://github.com/AbstractSDK/apps/"}